--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "workspaces": [
         "projects/*"
     ],
-    "private": true
+    "private": true,
+    "devDependencies": {
+        "lerna": "^3.20.2"
+    }
 }
