add lerna package

--- a/projects/manage/package.json
+++ b/projects/manage/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.1",
     "license": "MIT",
     "dependencies": {
+        "@tp-rd/create": "^1.0.0",
         "simple-git": "^1.132.0"
     },
     "scripts": {
