--- a/projects/main/package.json
+++ b/projects/main/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "start": "node src/index.ts"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@tp-rd/create": "^1.0.0"
+  }
 }
